@@ -7,7 +7,9 @@ Version 0.11
 
 - Added "Visual Studio" style.
 
-- Added ActionScript 3 lexer.
+- Added ActionScript 3 lexer, thanks to Pierre Bourdon.
+
+- Added YAML lexer, thanks to Kirill Simonov.
 
 
 Version 0.10
